# sintetizador-newave

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  deploy-requirements.txt  dev-requirements.txt  genindex.html  index.html  install.html  install.sh  main.py  objects.inv  processa_tabela.py  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  sintese.cfg  sintetizador-newave  teste_desempenho.py  uninstall.sh
.github/workflows/: docs.yml  main.yml
_downloads/07c3c73be2c04fa7fe7ad2e22c2fb41a/: plot_sintese_operacao.py
_downloads/8b706179ad2c3f0270bbe061aeec8f5b/: plot_sintese_operacao.ipynb
_downloads/960853cec2b10c1312db4612e9344f7d/: plot_sintese_cenarios.ipynb
_downloads/e1cc5c122660e279db047d91d16d4464/: plot_sintese_execucao.py
_downloads/e271fcb9224c8089f0cb0a57f6b53182/: plot_sintese_execucao.ipynb
_sources/: install.rst.txt  reference.rst.txt  sg_execution_times.rst.txt
_sources/apresentacao/: apresentacao.rst.txt
_sources/examples/: index.rst.txt  (+4 more)
_static/: documentation_options.js
app/: __init__.py  app.py
apresentacao/: apresentacao.html
examples/: README.rst  index.html  plot_sintese_cenarios.html  plot_sintese_cenarios.py  plot_sintese_execucao.html  plot_sintese_execucao.py  plot_sintese_operacao.html  plot_sintese_operacao.py  sg_execution_times.html
geral/: contribuicao.html  instalacao.html  tutorial.html
reference/: commands.html  model.html
referencia/: modelo.html  saidas.html
sintetizador/: __init__.py  app.py  config.py
tests/: conftest.py
(+2172 files in other folders)
