[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sintetizador-newave"
dynamic = ["version"]
dependencies = [
    "pandas",
    "pyarrow>=18.0.0",
    "click>=8.1.7",
    "numba>=0.60.0",
    "inewave>=1.9.2",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
]
description = "sintetizador-newave"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinx",
    "numpydoc",
    "plotly",
    "matplotlib",
]

[project.urls]
Documentation = "https://rjmalves.github.io/sintetizador-newave/"
Repository = "https://github.com/rjmalves/sintetizador-newave/"

[project.scripts]
sintetizador-newave = "main:main"

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "main.py",
  "app/",
]

[tool.ruff]
line-length = 80